--- a/src/client/partials/home.html
+++ b/src/client/partials/home.html
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-lg-12">
     <button class="btn btn-primary" type="button">
-      Unread Messages <span class="badge">{{ vm.notifications.length || 0 }}</span>
+      Unread Messages <span class="badge">{{ vm.unreadMessages.length || 0 }}</span>
     </button>
   </div>
 </div>
